# trading-app

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run.sh
src/: main.cpp  main.qml  resources.qrc
src/AppLayouts/Wallet/: qmldir
src/Market/: MarketLayout.qml
src/StatusQ/: CMakeLists.txt
src/StatusQ/include/StatusQ/: fastexpressionrole.h
src/StatusQ/src/: fastexpressionrole.cpp
src/utils/: LocaleUtils.qml  WalletUtils.qml  qmldir
